youfull/objects/Market_Menu__c.object
<CustomObject>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Market Menus</relationshipLabel>
        <relationshipName>Market_Menus</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Menu__c</fullName>
        <label>Parent Menu</label>
        <referenceTo>Market_Menu__c</referenceTo>
        <relationshipLabel>Market Menus</relationshipLabel>
        <relationshipName>Market_Menus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence_Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Levels__c</fullName>
        <inlineHelpText>0 = Candidate
1- UL
2-AUL
3-EUL
4-SEUL</inlineHelpText>
        <label>Title Levels</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Open In New Window</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open In Same Window</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open as Overlay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Zone Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avon Division Manager</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Market Menu</label>
    <nameField>
        <label>Menu Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IZ0000000Cs16MAC_00NZ0000000UVB5MAO</fullName>
        <active>true</active>
        <field>Market_Menu__c.Parent_Menu__c</field>
        <filterItems>
            <field>$Source.Market__c</field>
            <operation>equals</operation>
            <valueField>Market_Menu__c.Market__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Market Menu_Parent Menu</name>
        <sourceObject>Market_Menu__c</sourceObject>
    </namedFilters>
    <pluralLabel>Market Menus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>